--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
 cmake_minimum_required (VERSION 3.8)
      
-project (encryptions)
+project (creature_simulator)
+
+include_directories(${PROJECT_SOURCE_DIR}/src)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(app src/main.cpp)
-add_subdirectory(src/core)
-target_link_libraries(app core)
-target_link_libraries(app "pthread" "sfml-graphics" "sfml-audio" "sfml-network" "sfml-system" "sfml-window")
+add_subdirectory(src)
