--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -5,8 +5,9 @@ add_library(libclient
 )
 
 add_subdirectory(core)
-add_subdirectory(test)
+add_subdirectory(level)
 add_subdirectory(session)
+add_subdirectory(test)
 
 target_link_libraries(libclient
 	"pthread"
