--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/stdxx"]
 	path = libs/stdxx
-	url = git@github.com:JeneLitsch/stdxx.git
+	url = https://github.com/JeneLitsch/stdxx.git
