Basic Sockets for non-network-connection

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -2,8 +2,13 @@ cmake_minimum_required (VERSION 3.13)
 
 add_library(libserver
 	Server.cpp
+	Socket.cpp
 )
 
 target_link_libraries(libserver
 	"pthread"
+)
+
+target_link_libraries(libserver
+	libshared
 )
