--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required (VERSION 3.13)
 
-# add_subdirectory(shared)
+add_subdirectory(shared)
 add_subdirectory(client)
 add_subdirectory(server)
 
 add_executable(client main_client.cpp)
-target_link_libraries(client libclient)
+target_link_libraries(client libshared libclient libserver)
 
 add_executable(server main_server.cpp)
-target_link_libraries(server libserver)
+target_link_libraries(server libshared libserver)
