Separated backend and frontend completely and implemented client side interpolation between simulation states

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 3.13)
 add_library(libserver
 	Server.cpp
 	Socket.cpp
+	move_randomly.cpp
 )
 
 target_link_libraries(libserver
