test pheromone field is written to image

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -14,5 +14,13 @@ target_link_libraries(libserver
 )
 
 target_link_libraries(libserver
+	sfml-graphics
+	sfml-audio
+	sfml-network
+	sfml-system
+	sfml-window
+)
+
+target_link_libraries(libserver
 	libshared
 )
