Added pheromone emitter

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 3.13)
 
 add_library(libserver
+	emit_pheromones.cpp
 	move_randomly.cpp
 	read_sensors.cpp
 	Server.cpp
