--- a/src/server/component/CMakeLists.txt
+++ b/src/server/component/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required (VERSION 3.13)
 
 target_sources(libserver PRIVATE
-	MetabolismSensor.cpp
-	PheromoneField.cpp
-	PheromoneSensor.cpp
+	Metabolism.cpp
 )
