Moved systems in their own folder

--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -1,15 +1,13 @@
 cmake_minimum_required (VERSION 3.13)
 
 add_library(libserver
-	emit_pheromones.cpp
-	move_randomly.cpp
-	read_sensors.cpp
 	Server.cpp
 	Socket.cpp
 )
 
 add_subdirectory(component)
 add_subdirectory(senses)
+add_subdirectory(system)
 
 target_link_libraries(libserver
 	"pthread"
