--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required (VERSION 3.13)
 
-add_library(libshared
-	LocalConnection.cpp
-)
+add_library(libshared empty.cpp)
 
 target_link_libraries(libshared
 	"pthread"
