--- a/src/server/CMakeLists.txt
+++ b/src/server/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.13)
 
 add_library(libserver
 	Simulation.cpp
+	disperse_pheromones.cpp
 )
 
 add_subdirectory(component)
