Separated move from component move

--- a/src/server/system/CMakeLists.txt
+++ b/src/server/system/CMakeLists.txt
@@ -3,5 +3,6 @@ cmake_minimum_required (VERSION 3.13)
 target_sources(libserver PRIVATE
 	emit_pheromones.cpp
 	metabolize.cpp
+	move.cpp
 	read_sensors.cpp
 )
