--- a/src/server/senses/CMakeLists.txt
+++ b/src/server/senses/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.13)
 
 target_sources(libserver PRIVATE
-	MetabolismSensor.cpp
 	PheromoneField.cpp
 	PheromoneSensor.cpp
+	HungerSensor.cpp
 )
