Fixed sfml includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ option(BUILD_SHARED_LIBS "Build using shared libraries" OFF)
 include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/libs/stdxx)
 include_directories(${CMAKE_SOURCE_DIR}/libs/nanocomp)
+include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/libs/sfml/include)
 include_directories(${CMAKE_SOURCE_DIR}/src/shared/imgui)
 
 
