--- a/src/sim/CMakeLists.txt
+++ b/src/sim/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 3.13)
 add_library(libsim
 	Simulation.cpp
 	disperse_pheromones.cpp
+	create.cpp
 )
 
 add_subdirectory(component)
