--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.13)
 
-add_library(libshared empty.cpp)
+add_library(libshared )
 add_subdirectory(imgui)
 
 target_link_libraries(libshared
