--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(libclient
 add_subdirectory(core)
 add_subdirectory(level)
 add_subdirectory(session)
+add_subdirectory(start)
 add_subdirectory(test)
 
 target_link_libraries(libclient
