--- a/src/client/level/CMakeLists.txt
+++ b/src/client/level/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required (VERSION 3.13)
 
 target_sources(libclient PRIVATE
+	configMenu.cpp
+	Edit.cpp
 	Level.cpp
 	render.cpp
-    configMenu.cpp
 )
