--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(libclient
 )
 
 add_subdirectory(core)
+add_subdirectory(edit)
 add_subdirectory(level)
 add_subdirectory(session)
 add_subdirectory(main_menu)
