--- a/src/client/edit/CMakeLists.txt
+++ b/src/client/edit/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required (VERSION 3.13)
 
 target_sources(libclient PRIVATE
-	configMenu.cpp
-	Level.cpp
-	render.cpp
+	Edit.cpp
+	ui_tool.cpp
 )
+
+
+add_subdirectory(tool)
