--- a/src/client/edit/tool/shape/CMakeLists.txt
+++ b/src/client/edit/tool/shape/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required (VERSION 3.13)
 
 target_sources(libclient PRIVATE
-	Tool.cpp
+	Rect.cpp
+	Point.cpp
 )
-
-add_subdirectory(effect)
-add_subdirectory(shape)
