--- a/src/client/edit/tool/effect/CMakeLists.txt
+++ b/src/client/edit/tool/effect/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required (VERSION 3.13)
 target_sources(libclient PRIVATE
 	Barrier.cpp
 	Erase.cpp
-	PlaceEntity.cpp
+	EmptyEntity.cpp
 )
