--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.13)
 
-add_library(libclient
+add_library(client
 	Client.cpp
 )
 
@@ -11,18 +11,14 @@ add_subdirectory(session)
 add_subdirectory(main_menu)
 add_subdirectory(test)
 
-target_link_libraries(libclient
+target_link_libraries(client
 	pthread
 )
 
-target_link_libraries(libclient
+target_link_libraries(client
 	sfml-graphics
 	sfml-audio
 	sfml-network
 	sfml-system
 	sfml-window
-)
-
-target_link_libraries(libclient
-	libshared
 )
