--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required (VERSION 3.13)
 
-add_subdirectory(shared)
 add_subdirectory(client)
 add_subdirectory(sim)
 
 add_executable(app main_client.cpp)
-target_link_libraries(app libshared libclient libsim)
+target_link_libraries(app client sim imgui)
