--- a/src/client/level/CMakeLists.txt
+++ b/src/client/level/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.13)
 
-target_sources(libclient PRIVATE
+target_sources(client PRIVATE
 	configMenu.cpp
 	Level.cpp
 	render.cpp
