--- a/src/sim/system/CMakeLists.txt
+++ b/src/sim/system/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 3.13)
 
-target_sources(libsim PRIVATE
+target_sources(sim PRIVATE
 	metabolize.cpp
 	move.cpp
 	reproduce.cpp
