fixed linking error

--- a/libs/imgui/CMakeLists.txt
+++ b/libs/imgui/CMakeLists.txt
@@ -16,3 +16,11 @@ add_library(imgui
     imstb_textedit.h
     imstb_truetype.h
 )
+
+target_link_libraries(imgui
+	sfml-graphics
+	sfml-audio
+	sfml-network
+	sfml-system
+	sfml-window
+)
