Feature: Added food and food spawner tool

--- a/src/client/edit/tool/effect/CMakeLists.txt
+++ b/src/client/edit/tool/effect/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required (VERSION 3.13)
 target_sources(client PRIVATE
 	Barrier.cpp
 	Erase.cpp
-	EmptyEntity.cpp
 	Inspect.cpp
 	Petrify.cpp
+	PlaceEmptyCreature.cpp
+	PlaceFood.cpp
+	PlaceFoodSpawner.cpp
 )
