Feature: Basic file explorer for import and export

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(client
 
 add_subdirectory(core)
 add_subdirectory(edit)
+add_subdirectory(file)
 add_subdirectory(level)
 add_subdirectory(session)
 add_subdirectory(main_menu)
