Renamed level to view

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library(client
 add_subdirectory(core)
 add_subdirectory(edit)
 add_subdirectory(file)
-add_subdirectory(level)
+add_subdirectory(view)
 add_subdirectory(session)
 add_subdirectory(main_menu)
 add_subdirectory(test)
