--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,17 +9,19 @@ include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/libs/sfml/include)
 include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/libs/imgui)
 include_directories(SYSTEM ${CMAKE_SOURCE_DIR}/libs/xoshiro)
 
-set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lwsock32 -lws2_32 ${CMAKE_CSS_STANDARD_LIBRARIES}")
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive")
+# uncomment for windows standalone exe
+#set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lwsock32 -lws2_32 ${CMAKE_CSS_STANDARD_LIBRARIES}")
+#set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive")
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_CXX_STANDARD 20)
 
 add_compile_options(
-	-static 
-	-static-libgcc 
-	-static-libstdc++
+	# uncomment for windows standalone exe
+	#-static 
+	#-static-libgcc 
+	#-static-libstdc++
 	-g
 	-O3
 	-Wall 
